# gh-actions-metrics

./: Cargo.toml
.github/workflows/: push_main.yml  stats.yml
src/: cli.rs  duration_unit.rs  granularity.rs  main.rs  workflows.rs
