[package]
name = "gh-actions-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive", "env"] }
http = "0.2.11"
octocrab = "0.32.0"
polars = { version = "0.35.4", features = ["lazy", "round_series", "csv"] }
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
